# snake

./: .gitignore  CMakeLists.txt  README.txt  Snake
include/: drawing_functions.cpp  randomness_functions.cpp  simple_framerate_timer.cpp
src/: constants.cpp  food.hpp  main.cpp  player1.hpp  snake_node.hpp
src/core/: CoreManager.cpp  CoreManager.hpp  Simulation.cpp  Simulation.hpp  pceSDL.hpp
src/tools/: simple_framerate_timer.hpp  virtual_keyboard.hpp
test/: benchmark.cpp  test.cpp
